# DP-HLS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  Makefile  NOTE.md  NOTE.sh  README.md  README_1.md  TEST.md  alignhls.cpython-38-x86_64-linux-gnu.so.REMOVED.git-id  compile_vitis_cosim.sh  compile_vitis_cosim_1.sh  cosim_scaling.sh  data  dconfig  demo.py  documentation.md  dphls.py  further_throughput_1.sh  further_throughput_2.sh  generate_golden.sh  golden.py  init.sh  module.cpp  output.txt  output_backup.txt  parallel_compile.py  reinstall.sh  reports_compile  reports_vitis_hls  seq_align_test  setup.py  sol.py  some notes  test_wrapper.tcl  tmp.sh  tmp.txt  viterbi_scored.txt  (+2 more)
.github/workflows/: github-actions.yaml
BasicKernel/: hls.app
BasicKernel/solution1/: solution1.aps  solution1.directive  solution1_data.json
alignhls-documentation/latex/: PE_8h.tex  annotated.tex  classShiftRegisterBlock.tex  compat_8h_source.tex  files.tex  host_8h.tex  host_8h_source.tex  initial_8h_source.tex  namespacePE.tex  namespacePE_1_1Linear.tex  namespaceTestbench.tex  namespaceTraceback.tex  namespaceUtils.tex  namespaceUtils_1_1Array.tex  namespaceUtils_1_1Init.tex  namespaceUtils_1_1Matrix.tex  params_8h.tex  pyapi_8h.tex  pyapi_8h_source.tex  refman.tex  seq__align_8h_source.tex  shift__reg_8h.tex  shift__reg_8h_source.tex  structBlockInputs.tex  structBlockOutputs.tex  structInitialValues.tex  structScorePack.tex  testbench_8h.tex
alignhls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
banded_sw/: params.h  seq_align.cpp  seq_align.h  seq_align_test.cpp
baseline/: local_linear_baseline.cpp  local_linear_baseline.h  local_linear_baseline_testbench.cpp  shift_register.h
baseline/hardware/: README.md
baseline/software/: README.md  run_baseline.sh  run_gpu_baseline.sh  run_sw_baseline.sh  test.sh
baseline/software/source/: CMakeLists.txt  banded_local_linear.cpp  global_affine.cpp  global_linear.cpp  hello_world.cpp  local_affine.cpp  local_linear.cpp  overlap_linear.cpp  semi_global_linear.cpp
benchmark/: README.md  __init__.py  utils.py
compile/: Makefile  README.md  bitstream_config.cfg  global_affine  host  vitis_analyzer.jou
compile/OCL/: Makefile
compile/XRT/: Makefile
compile/_x/: v++_compile_global_affine_k_guidance.json  v++_compile_global_affine_k_guidance.pb
configs/: global_linear_params.h  local_linear_params.h
configs/global_linear/: params.h
configs/local_linear/: params.h
debug/: debug_kernel_0  debug_kernel_1  debug_kernel_2  debug_kernel_3
demo/global_affine/: config.json
docs/: dconfig  mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html  search.html
doxygen_out/html/: PE_8h.html  PE_8h_source.html  annotated.html  classAHRunner-members.html  classAHRunner.html  classDebugger-members.html  classDebugger.html  classDebugger_1_1MSG-members.html  classDebugger_1_1MSG.html  classLoopCounter-members.html  classLoopCounter.html  classResults-members.html  classResults.html  classShiftRegister-members.html  classShiftRegister.html  classShiftRegisterBlock-members.html  classShiftRegisterBlock.html  classTraceBack-members.html  classTraceBack.html  (+71 more)
global_seq_align_cpp/: params.h  seq_align.cpp  seq_align.h  seq_align_test.cpp
include/: PE.h  align.h  cl_utils.h  compat.h  components.h  debug.h  dp_hls_common.h  frontend.h  host.h  host_utils.h  initial.h  params.h  params_backup.h  pyapi.h  seq_align.h  seq_align_multiple.h  shift_reg.h  solution_viterbi.h  solutions.h  traceback.h  utils.h
increment/: module.cpp
inputs/: config.json
kernels/: README.md  kernel_global_affine.cpp
legacy/: local_linear.h  local_linear_testbench.cpp
local_seq_align/: params.h  seq_align.c  seq_align.h  seq_align_test.c
local_seq_align_cpp/: params.h  seq_align.cpp  seq_align.h  seq_align_test.cpp
local_seq_align_multiple_sa/: PE.cpp  PE.h  params.h  seq_align.cpp  seq_align.h  seq_align_multiple.cpp  seq_align_multiple.h  seq_align_test  seq_align_test.cpp  shift_reg.h  tbcontainer.h
local_seq_align_multiple_sa_backup/: seq_align_multiple.cpp
mountpoints/: Vitis_Projects
multiple_seq_align/: PE.cpp  PE.h  hls.app  loop_counter.h  params.h  seq_align.cpp  seq_align.h  seq_align_multiple.cpp  seq_align_multiple.h  seq_align_test.cpp  traceback.h
outputs/: CMakeCache.txt  Makefile  cmake_install.cmake  seq_align_test_out
py-hls/: auto_cosim.py  parallel_compile.py
scripts/: create_afi.sh  extract_lines.sh  extract_report.sh  extract_vitis_report.sh  link_detailed_report.sh
seq_align_affine_cpp/: seq_align.h  seq_align_multiple.cpp  seq_align_multiple.h  seq_align_test.cpp
src/: PE.cpp  PE.h  align.cpp  compat.cpp  debug.cpp  debug.h  frontend.cpp  host_utils.cpp  initial.cpp  params.h  pe.cpp  pyapi.cpp  seq_align.cpp  seq_align.h  seq_align_multiple.cpp  seq_align_multiple.h  seq_align_test.cpp  shift_reg.h  traceback.cpp  utils.cpp  utils.h
templates/: Makefile.template  cosim.tcl  cosim.tcl.template  create_project.tcl.deprecated  create_project.tcl.template  params.h  project_basics.tcl.template  seq_align_multiple.cpp
testbench/: components_top.cpp  multidimcast_test.cpp  seq_align_test.cpp  solutions.cpp  test_align.cpp  test_cosim.cpp  test_csim.cpp  test_csim_banding_global_linear.cpp  test_csim_banding_local_affine_scored.cpp  test_csim_dtw.cpp  test_csim_global_affine.cpp  test_csim_global_affine_real_data.cpp  test_csim_global_linear.cpp  test_csim_global_two_piece_affine.cpp  test_csim_local_affine.cpp  test_csim_local_linear.cpp  test_csim_local_linear_notb.cpp  test_csim_local_two_piece_affine.cpp  test_csim_overlap_linear_suffix_prefix.cpp  test_csim_profile_alignment.cpp  test_csim_profile_alignment_real_data.cpp  test_csim_protein_local_affine.cpp  test_csim_sdtw.cpp  test_csim_semi_global_linear_long_short.cpp  test_csim_semi_global_linear_short_long.cpp  test_csim_viterbi.cpp  test_global_affine.cpp  test_global_linear.cpp  test_local_affine.cpp  test_local_linear.cpp  test_pyapi.cpp  test_simd.cpp  testbench.cpp
verification/: dtw.py
vitis/: README.md
(+3163 files in other folders)
